--- a/style.css
+++ b/style.css
@@ -1,76 +1,74 @@
 html, body {
-  margin: 0;
-  padding: 0;
-  width: 100vw;
-  height: 100vh;
-  overflow: hidden;
-  color: #fff;
-  font-family: sans-serif;
-  line-height: 1;
+	margin: 0;
+	padding: 0;
+	width: 100vw;
+	height: 100vh;
+	overflow: hidden;
+	color: #fff;
+	line-height: 1;
+	font-family: 'Noto Sans SC', sans-serif;
+	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
-.full-screen {
-  width: 100%;
-  height: 100%;
-  position: relative;
-  background-position: center !important;
-  background-attachment: fixed !important;
-  background-repeat: no-repeat !important;
-  background-size: cover;
-  -webkit-animation: fadein 0.4s;
-  animation: fadein 0.4s;
-  background-color: #222;
+#screen {
+	width: 100%;
+	height: 100%;
+	position: relative;
+	background-position: center !important;
+	background-attachment: fixed !important;
+	background-repeat: no-repeat !important;
+	background-size: cover;
+	-webkit-animation: fadein 0.4s;
+	animation: fadein 0.4s;
+	background-color: #222;
 }
 
 @keyframes fadein {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
 }
 
 @-webkit-keyframes fadein {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
 }
 
-.full-screen::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 2;
+#screen::before {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 2;
 }
 
-.content {
-  z-index: 3;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-  width: 100%;
+#time {
+	z-index: 3;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -100%);
+	text-align: center;
+	width: 100%;
 }
 
-.time, .greetings {
-  margin: 0;
-  font-size: 5rem;
-  letter-spacing: .025rem;
+#hour, #minute, #colon {
+	display: inline;
+	margin: 0;
+	font-size: 5rem;
+	letter-spacing: .025rem;
 }
 
-.ampm {
-  font-size: 2rem;
-  font-weight: normal;
+#greeting {
+	font-size: 2rem;
 }
 
-.greetings {
-  font-size: 3.5rem;
-}
