--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,7 @@ html, body {
 	color: #fff;
 	line-height: 1;
 	font-family: 'Noto Sans SC', sans-serif;
-	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+	text-shadow: 1px 1px 50px #222;
 }
 
 #screen {
@@ -56,7 +56,7 @@ html, body {
 	position: absolute;
 	left: 50%;
 	top: 50%;
-	transform: translate(-50%, -100%);
+	transform: translate(-50%, -55%);
 	text-align: center;
 	width: 100%;
 }
@@ -64,11 +64,11 @@ html, body {
 #hour, #minute, #colon {
 	display: inline;
 	margin: 0;
-	font-size: 5rem;
+	font-size: 4rem;
 	letter-spacing: .025rem;
 }
 
 #greeting {
-	font-size: 2rem;
+	font-size: 1.5rem;
 }
 
