--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,7 @@ html, body {
 	color: #fff;
 	line-height: 1;
 	font-family: 'Noto Sans SC', sans-serif;
-	text-shadow: 1px 1px 50px #222;
+	text-shadow: 1px 1px 50px #777;
 }
 
 #screen {
@@ -20,7 +20,7 @@ html, body {
 	background-size: cover;
 	-webkit-animation: fadein 0.4s;
 	animation: fadein 0.4s;
-	background-color: #222;
+	background-color: #ffaadd;
 }
 
 @keyframes fadein {
@@ -56,7 +56,7 @@ html, body {
 	position: absolute;
 	left: 50%;
 	top: 50%;
-	transform: translate(-50%, -55%);
+	transform: translate(-50%, -60%);
 	text-align: center;
 	width: 100%;
 }
@@ -64,11 +64,11 @@ html, body {
 #hour, #minute, #colon {
 	display: inline;
 	margin: 0;
-	font-size: 4rem;
+	font-size: 5rem;
 	letter-spacing: .025rem;
 }
 
 #greeting {
-	font-size: 1.5rem;
+	font-size: 2.5rem;
 }
 
