--- a/src/style.css
+++ b/src/style.css
@@ -10,7 +10,7 @@ html, body {
 	text-shadow: 1px 1px 50px #777;
 }
 
-#screen {
+#background {
 	width: 100%;
 	height: 100%;
 	position: relative;
@@ -41,7 +41,7 @@ html, body {
 	}
 }
 
-#screen::before {
+#background::before {
 	content: '';
 	position: absolute;
 	top: 0;
@@ -56,7 +56,7 @@ html, body {
 	position: absolute;
 	left: 50%;
 	top: 50%;
-	transform: translate(-50%, -60%);
+	transform: translate(-50%, -55%);
 	text-align: center;
 	width: 100%;
 }
@@ -64,11 +64,11 @@ html, body {
 #hour, #minute, #colon {
 	display: inline;
 	margin: 0;
-	font-size: 5rem;
+	font-size: 8.5rem;
 	letter-spacing: .025rem;
 }
 
 #greeting {
-	font-size: 2.5rem;
+	font-size: 3rem;
 }
 
